删除评论、拉取评论并且删除eatest及其文件
